<?xml version="1.0"?>
<package>
  <name>asr_mild_base_launch_files</name>
  <version>1.0.0</version>
  <description>This package contains the launch files and different documents needed to start the system</description>
  <author>Borella Jocelyn, Dehmani Souheil, Marek Felix, Mayr Matthias</author>
  <maintainer email="asr-ros@lists.kit.edu">Meißner Pascal</maintainer> 
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/asr_mild_base_launch_files</url>
 
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
